samples/_failures_safe/1761632847_985344_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f5c1485.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_7f5c1485.c:174:9: error: expected expression at end of input
  174 |         } else if (token.value[
      |         ^
./samples/SAFE/__tmp_7f5c1485.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f5c1485.c:174:9: error: expected declaration or statement at end of input
